Fixed header sizes on mobile

--- a/glytter.scss
+++ b/glytter.scss
@@ -43,6 +43,10 @@
       width: 96vw;
     }
 
+    footer {
+      margin-bottom: 1rem;
+    }
+
     h1 {
       line-height: 1.25;
       margin: .5rem 0 1rem 0;
